--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,8 @@
-<p>auth works!</p>
+<h1>Bienvenido</h1>
+<div>
+  <mat-card>
+    <mat-card-content>
+      <router-outlet></router-outlet>
+    </mat-card-content>
+  </mat-card>
+</div>
