--- a/src/app/dashboard/pages/users/components/users-table/users-table.component.html
+++ b/src/app/dashboard/pages/users/components/users-table/users-table.component.html
@@ -28,6 +28,9 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
     <td mat-cell *matCellDef="let user">
+      <button [routerLink]="user.id" mat-icon-button color="primary">
+        <mat-icon>visibility</mat-icon>
+      </button>
       <button (click)="editUser.emit(user)" mat-icon-button color="primary">
         <mat-icon>edit</mat-icon>
       </button>
