--- a/src/app/dashboard/layout/nav-menu/nav-menu.component.html
+++ b/src/app/dashboard/layout/nav-menu/nav-menu.component.html
@@ -2,5 +2,6 @@
 <mat-nav-list>
   <a routerLink="home" mat-list-item>Inicio</a>
   <a routerLink="users" mat-list-item>Usuarios</a>
+  <a routerLink="courses" mat-list-item>Cursos</a>
   <a (click)="logout()" mat-list-item>Cerrar sesión</a>
 </mat-nav-list>
